--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"test:integration": "playwright test",
-		"test:unit": "vitest"
+		"test:unit": "vitest",
+		"migration:generate": "drizzle-kit generate",
+		"migration:migrate": "drizzle-kit migrate"
 	},
 	"devDependencies": {
 		"@melt-ui/pp": "^0.3.2",
