--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
 		"migration:migrate": "drizzle-kit migrate"
 	},
 	"devDependencies": {
-		"@melt-ui/pp": "^0.3.2",
-		"@melt-ui/svelte": "^0.83.0",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
@@ -44,6 +42,7 @@
 	"type": "module",
 	"dependencies": {
 		"@libsql/client": "^0.10.0",
-		"drizzle-orm": "^0.33.0"
+		"drizzle-orm": "^0.33.0",
+		"lucide-svelte": "^0.441.0"
 	}
 }
