--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@sveltejs/adapter-auto": "^3.2.5",
 		"@sveltejs/kit": "^2.7.1",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.8",
+		"@types/bcrypt": "^5.0.2",
 		"@types/eslint": "^9.6.1",
 		"autoprefixer": "^10.4.20",
 		"daisyui": "^4.12.13",
@@ -45,6 +46,7 @@
 	"dependencies": {
 		"@formkit/tempo": "^0.1.2",
 		"@libsql/client": "^0.14.0",
+		"bcrypt": "^5.1.1",
 		"drizzle-orm": "^0.35.2",
 		"lucide-svelte": "^0.453.0"
 	}
