--- a/package.json
+++ b/package.json
@@ -18,36 +18,36 @@
 		"studio": "npx drizzle-kit studio"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.48.1",
-		"@sveltejs/adapter-auto": "^3.2.5",
-		"@sveltejs/kit": "^2.7.1",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.8",
+		"@playwright/test": "^1.49.1",
+		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/kit": "^2.10.1",
+		"@sveltejs/vite-plugin-svelte": "^5.0.1",
 		"@types/bcrypt": "^5.0.2",
 		"@types/eslint": "^9.6.1",
 		"autoprefixer": "^10.4.20",
-		"daisyui": "^4.12.13",
-		"drizzle-kit": "^0.26.2",
-		"eslint": "^9.13.0",
+		"daisyui": "^4.12.20",
+		"drizzle-kit": "^0.30.0",
+		"eslint": "^9.16.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.45.1",
-		"globals": "^15.11.0",
-		"prettier": "^3.3.3",
-		"prettier-plugin-svelte": "^3.2.7",
-		"prettier-plugin-tailwindcss": "^0.6.8",
-		"svelte": "^5.0.0-next.262",
-		"svelte-check": "^4.0.5",
-		"tailwindcss": "^3.4.14",
-		"typescript": "^5.6.3",
-		"typescript-eslint": "^8.10.0",
-		"vite": "^5.4.9",
-		"vitest": "^2.1.3"
+		"eslint-plugin-svelte": "^2.46.1",
+		"globals": "^15.13.0",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.2",
+		"prettier-plugin-tailwindcss": "^0.6.9",
+		"svelte": "^5.10.1",
+		"svelte-check": "^4.1.1",
+		"tailwindcss": "^3.4.16",
+		"typescript": "^5.7.2",
+		"typescript-eslint": "^8.18.0",
+		"vite": "^6.0.3",
+		"vitest": "^2.1.8"
 	},
 	"type": "module",
 	"dependencies": {
 		"@formkit/tempo": "^0.1.2",
 		"@libsql/client": "^0.14.0",
 		"bcrypt": "^5.1.1",
-		"drizzle-orm": "^0.35.2",
-		"lucide-svelte": "^0.453.0"
+		"drizzle-orm": "^0.38.0",
+		"lucide-svelte": "^0.468.0"
 	}
 }
