--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"@libsql/client": "^0.14.0",
 		"bcrypt": "^5.1.1",
 		"drizzle-orm": "^0.38.0",
-		"lucide-svelte": "^0.468.0"
+		"lucide-svelte": "^0.468.0",
+		"tailwind-merge": "^2.5.5"
 	}
 }
