--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.49.1",
+		"@skeletonlabs/skeleton": "^2.10.3",
+		"@skeletonlabs/tw-plugin": "^0.4.0",
 		"@sveltejs/adapter-auto": "^3.3.1",
 		"@sveltejs/kit": "^2.10.1",
 		"@sveltejs/vite-plugin-svelte": "^5.0.1",
