--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@sveltejs/adapter-auto": "^3.3.1",
 		"@sveltejs/kit": "^2.10.1",
 		"@sveltejs/vite-plugin-svelte": "^5.0.1",
+		"@tailwindcss/forms": "^0.5.9",
 		"@types/bcrypt": "^5.0.2",
 		"@types/eslint": "^9.6.1",
 		"autoprefixer": "^10.4.20",
