--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
 		"@libsql/client": "^0.14.0",
 		"bcrypt": "^5.1.1",
 		"drizzle-orm": "^0.38.0",
+		"drizzle-valibot": "^0.3.0",
 		"lucide-svelte": "^0.468.0",
 		"mailersend": "^2.3.0",
-		"tailwind-merge": "^2.5.5"
+		"tailwind-merge": "^2.5.5",
+		"valibot": "^1.0.0-beta.9"
 	}
 }
