--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.9",
 		"svelte": "^5.10.1",
 		"svelte-check": "^4.1.1",
+		"sveltekit-superforms": "^2.21.1",
 		"tailwindcss": "^3.4.16",
 		"typescript": "^5.7.2",
 		"typescript-eslint": "^8.18.0",
