--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"@formkit/tempo": "^0.1.2",
 		"@libsql/client": "^0.14.0",
 		"bcrypt": "^5.1.1",
+		"chart.js": "^4.4.7",
 		"drizzle-orm": "^0.38.3",
 		"drizzle-valibot": "^0.3.1",
 		"lucide-svelte": "^0.469.0",
