--- a/package.json
+++ b/package.json
@@ -58,5 +58,6 @@
 		"mailersend": "^2.3.0",
 		"tailwind-merge": "^2.6.0",
 		"valibot": "^1.0.0-beta.9"
-	}
+	},
+	"packageManager": "pnpm@9.15.1+sha512.1acb565e6193efbebda772702950469150cf12bcc764262e7587e71d19dc98a423dff9536e57ea44c49bdf790ff694e83c27be5faa23d67e0c033b583be4bfcf"
 }
