--- a/package.json
+++ b/package.json
@@ -18,46 +18,46 @@
 		"studio": "npx drizzle-kit studio"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.49.1",
-		"@skeletonlabs/skeleton": "^2.10.4",
-		"@skeletonlabs/tw-plugin": "^0.4.0",
-		"@sveltejs/adapter-auto": "^3.3.1",
-		"@sveltejs/kit": "^2.15.1",
+		"@playwright/test": "^1.52.0",
+		"@skeletonlabs/skeleton": "^2.11.0",
+		"@skeletonlabs/tw-plugin": "^0.4.1",
+		"@sveltejs/adapter-auto": "^6.0.1",
+		"@sveltejs/kit": "^2.21.1",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/forms": "^0.5.9",
 		"@types/bcrypt": "^5.0.2",
 		"@types/eslint": "^9.6.1",
-		"autoprefixer": "^10.4.20",
+		"autoprefixer": "^10.4.21",
 		"daisyui": "^4.12.23",
-		"drizzle-kit": "^0.30.1",
-		"eslint": "^9.17.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.46.1",
-		"globals": "^15.14.0",
-		"prettier": "^3.4.2",
-		"prettier-plugin-svelte": "^3.3.2",
-		"prettier-plugin-tailwindcss": "^0.6.9",
-		"svelte": "^5.16.0",
-		"svelte-check": "^4.1.1",
-		"sveltekit-superforms": "^2.22.1",
+		"drizzle-kit": "^0.31.1",
+		"eslint": "^9.28.0",
+		"eslint-config-prettier": "^10.1.5",
+		"eslint-plugin-svelte": "^3.9.0",
+		"globals": "^16.2.0",
+		"prettier": "^3.5.3",
+		"prettier-plugin-svelte": "^3.4.0",
+		"prettier-plugin-tailwindcss": "^0.6.12",
+		"svelte": "^5.33.11",
+		"svelte-check": "^4.2.1",
+		"sveltekit-superforms": "^2.25.0",
 		"tailwindcss": "^3.4.17",
-		"typescript": "^5.7.2",
-		"typescript-eslint": "^8.19.0",
-		"vite": "^6.0.6",
-		"vitest": "^2.1.8"
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.33.0",
+		"vite": "^6.3.5",
+		"vitest": "^2.1.9"
 	},
 	"type": "module",
 	"dependencies": {
 		"@formkit/tempo": "^0.1.2",
-		"@libsql/client": "^0.14.0",
-		"bcrypt": "^5.1.1",
-		"chart.js": "^4.4.7",
-		"drizzle-orm": "^0.38.3",
-		"drizzle-valibot": "^0.3.1",
-		"lucide-svelte": "^0.469.0",
-		"mailersend": "^2.3.0",
+		"@libsql/client": "^0.15.8",
+		"bcrypt": "^6.0.0",
+		"chart.js": "^4.4.9",
+		"drizzle-orm": "^0.44.1",
+		"drizzle-valibot": "^0.4.2",
+		"lucide-svelte": "^0.511.0",
+		"mailersend": "^2.6.0",
 		"tailwind-merge": "^2.6.0",
-		"valibot": "^1.0.0-beta.9"
+		"valibot": "^1.1.0"
 	},
 	"packageManager": "pnpm@9.15.1+sha512.1acb565e6193efbebda772702950469150cf12bcc764262e7587e71d19dc98a423dff9536e57ea44c49bdf790ff694e83c27be5faa23d67e0c033b583be4bfcf"
 }
