--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 	"dependencies": {
 		"@formkit/tempo": "^0.1.2",
 		"@libsql/client": "^0.15.8",
+		"arktype": "^2.1.20",
 		"bcrypt": "^6.0.0",
 		"chart.js": "^4.4.9",
 		"drizzle-orm": "^0.44.1",
