--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"chart.js": "^4.4.9",
 		"drizzle-orm": "^0.44.1",
 		"drizzle-valibot": "^0.4.2",
+		"formsnap": "^2.0.1",
 		"lucide-svelte": "^0.511.0",
 		"mailersend": "^2.6.0",
 		"tailwind-merge": "^2.6.0",
