--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/forms": "^0.5.9",
 		"@types/bcrypt": "^5.0.2",
+		"@types/better-sqlite3": "^7.6.13",
 		"@types/eslint": "^9.6.1",
 		"autoprefixer": "^10.4.21",
 		"daisyui": "^4.12.23",
@@ -52,6 +53,7 @@
 		"@libsql/client": "^0.15.8",
 		"arktype": "^2.1.20",
 		"bcrypt": "^6.0.0",
+		"better-sqlite3": "^12.2.0",
 		"chart.js": "^4.4.9",
 		"drizzle-orm": "^0.44.1",
 		"drizzle-valibot": "^0.4.2",
