--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"arktype": "^2.1.20",
 		"bcrypt": "^6.0.0",
 		"better-sqlite3": "^12.2.0",
+		"bits-ui": "^2.8.11",
 		"chart.js": "^4.4.9",
 		"drizzle-orm": "^0.44.1",
 		"drizzle-valibot": "^0.4.2",
