tailwind update scrypt

--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
 		"@sveltejs/kit": "^2.21.1",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/forms": "^0.5.9",
+		"@tailwindcss/postcss": "^4.1.11",
 		"@types/bcrypt": "^5.0.2",
 		"@types/better-sqlite3": "^7.6.13",
 		"@types/eslint": "^9.6.1",
-		"autoprefixer": "^10.4.21",
 		"drizzle-kit": "^0.31.1",
 		"eslint": "^9.28.0",
 		"eslint-config-prettier": "^10.1.5",
@@ -34,11 +34,11 @@
 		"globals": "^16.2.0",
 		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.4.0",
-		"prettier-plugin-tailwindcss": "^0.6.12",
+		"prettier-plugin-tailwindcss": "^0.6.14",
 		"svelte": "^5.33.11",
 		"svelte-check": "^4.2.1",
 		"sveltekit-superforms": "^2.25.0",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "^4.1.11",
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.33.0",
 		"vite": "^6.3.5",
