--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@sveltejs/kit": "^2.25.1",
 		"@sveltejs/vite-plugin-svelte": "^6.1.0",
 		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/vite": "^4.1.11",
 		"@types/bcrypt": "^6.0.0",
 		"@types/better-sqlite3": "^7.6.13",
 		"@types/eslint": "^9.6.1",
