--- a/.github/workflows/auto-assign-pr.yml
+++ b/.github/workflows/auto-assign-pr.yml
@@ -7,15 +7,15 @@ on:
 jobs:
   assign-creator:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
+      - name: Install GitHub CLI
+        run: sudo apt-get install gh
+
       - name: Assign PR creator
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const prCreator = context.payload.pull_request.user.login;
-            await github.rest.issues.addAssignees({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.payload.pull_request.number,
-              assignees: [prCreator],
-            });
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh pr edit ${{ github.event.pull_request.number }} \
+            --add-assignee "${{ github.event.pull_request.user.login }}"
