--- a/.github/workflows/auto-assign-pr.yml
+++ b/.github/workflows/auto-assign-pr.yml
@@ -1,21 +1,13 @@
-name: Auto-assign PR creator
-
+name: 'Auto Assign'
 on:
   pull_request:
-    types: [opened, reopened]
+    types: [opened, ready_for_review]
 
 jobs:
-  assign-creator:
+  add-reviews:
     runs-on: ubuntu-latest
-    permissions:
-      pull-requests: write
     steps:
-      - name: Install GitHub CLI
-        run: sudo apt-get install gh
+      - uses: kentaro-m/auto-assign-action@v2.0.0
+        with:
+          configuration-path: '.github/auto-assign-pr-config.yml' # Only needed if you use something other than .github/auto_assign.yml
 
-      - name: Assign PR creator
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh pr edit ${{ github.event.pull_request.number }} \
-            --add-assignee "${{ github.event.pull_request.user.login }}"
